--- a/themes/jpec/scss/jpec/paragraphs/_event_reference.scss
+++ b/themes/jpec/scss/jpec/paragraphs/_event_reference.scss
@@ -2,9 +2,10 @@
   padding: 0;
 
 }
-.paragraphs-item-event-reference { 
+#content .entity-paragraphs-item.paragraphs-item-event-reference { 
   .content.container {
     padding-top: 0;
+    padding-bottom: 3rem;
   }
 
   .event_container {
